--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -52,7 +52,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a id="deleteConfirmReview" href="#" class="btn
+          <a id="deleteConfirmReview" href="#" aria-label="delete-confirm-review" class="btn
           btn-danger">Delete</a>
         </div>
       </div>
@@ -137,7 +137,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a id="deleteConfirm" href="#" class="btn
+          <a id="deleteConfirm" href="#" aria-label="delete-confirm" class="btn
           btn-danger">Delete</a>
         </div>
       </div>
