--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -26,11 +26,11 @@
       <strong>{% trans "Menu:" %}</strong>
       <ul>
         {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">{% trans "Change Email" %}</a></li>
-        <li><a href="{% url 'account_logout' %}">{% trans "Sign Out" %}</a></li>
+        <li><a href="{% url 'account_email' %}" aria-label="account-email">{% trans "Change Email" %}</a></li>
+        <li><a href="{% url 'account_logout' %}" aria-label="account-logout">{% trans "Sign Out" %}</a></li>
         {% else %}
-        <li><a href="{% url 'account_login' %}">{% trans "Sign In" %}</a></li>
-        <li><a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
+        <li><a href="{% url 'account_login' %}" aria-label="account-login">{% trans "Sign In" %}</a></li>
+        <li><a href="{% url 'account_signup' %}" aria-label="account-signup">{% trans "Sign Up" %}</a></li>
         {% endif %}
       </ul>
     </div>
