--- a/templates/account/email_change.html
+++ b/templates/account/email_change.html
@@ -8,12 +8,12 @@
     {% if emailaddresses %}
         {% if current_emailaddress %}
             <p>
-                {% trans 'The following email address is associated with your account:' %} <a href="mailto:{{ current_emailaddress.email }}">{{ current_emailaddress.email }}</a>
+                {% trans 'The following email address is associated with your account:' %} <a href="mailto:{{ current_emailaddress.email }}" aria-label="current_emailaddress-email">{{ current_emailaddress.email }}</a>
             </p>
         {% endif %}
         {% if new_emailaddress %}
             <p>
-                {% trans 'Your email address is still pending verification:' %} <a href="mailto:{{ new_emailaddress.email }}">{{ new_emailaddress.email }}</a>
+                {% trans 'Your email address is still pending verification:' %} <a href="mailto:{{ new_emailaddress.email }}" aria-label="new-emailaddress-email">{{ new_emailaddress.email }}</a>
             </p>
             <form method="post" action="{% url 'account_email' %}">
                 {% csrf_token %}
