--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -14,7 +14,7 @@
 
             <p>{% blocktrans %}Welcome back to the Catch a dog site. To leave review or comment please log in. If
                 you
-                have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
+                have not created an account yet, then <a class="link" href="{{ signup_url }}" aria-label="signup-url">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
     </div>
