--- a/templates/mfa/index.html
+++ b/templates/mfa/index.html
@@ -11,14 +11,14 @@
             <p>{% translate "Authentication using an authenticator app is active." %}</p>
             <ul class="actions">
                 <li>
-                    <a href="{% url 'mfa_deactivate_totp' %}">{% translate "Deactivate" %}</a>
+                    <a href="{% url 'mfa_deactivate_totp' %}" aria-label="mfa-deactivate-totp">{% translate "Deactivate" %}</a>
                 </li>
             </ul>
         {% else %}
             <p>{% translate "An authenticator app is not active." %}</p>
             <ul class="actions">
                 <li>
-                    <a href="{% url 'mfa_activate_totp' %}">{% translate "Activate" %}</a>
+                    <a href="{% url 'mfa_activate_totp' %}" aria-label="mfa-activate-totp">{% translate "Activate" %}</a>
                 </li>
             </ul>
         {% endif %}
@@ -31,13 +31,13 @@
             </p>
             <ul class="actions">
                 <li>
-                    <a href="{% url 'mfa_view_recovery_codes' %}">{% translate "View codes" %}</a>
+                    <a href="{% url 'mfa_view_recovery_codes' %}" aria-label="mfa-view-recovery-codes">{% translate "View codes" %}</a>
                 </li>
                 <li>
-                    <a href="{% url 'mfa_download_recovery_codes' %}">{% translate "Download codes" %}</a>
+                    <a href="{% url 'mfa_download_recovery_codes' %}" aria-label="mfa-download-recovery-coes">{% translate "Download codes" %}</a>
                 </li>
                 <li>
-                    <a href="{% url 'mfa_generate_recovery_codes' %}">{% translate "Generate new codes" %}</a>
+                    <a href="{% url 'mfa_generate_recovery_codes' %}" aria-label="mfa-generate-recovery-codes">{% translate "Generate new codes" %}</a>
                 </li>
             </ul>
         {% else %}
