--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 <head>
   <title>Catch a dog</title>
   <meta charset="UTF-8">
+  <meta name="description" content="catch a dog advanced zoophysiotherapy and fitness">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Fonts CSS -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
