--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -16,22 +16,20 @@
     </div>
     <div class="row">
         <div class="col text-right">
-            <div class="text-center fs-5 contact-about">
-                <ul class="text-center">
-                    <li><strong>If you want to get more information about therapy or make an
-                            appointment, please contact me
-                            by:</strong></li><br>
-                    <li class="text-center contact-email">email: justyna@gmail.com</li><br>
+            <div class="text-center fs-5 ">
+                <p><strong>If you want to get more information about therapy or make an appointment, please contact me by:</strong></p>
+                <ul class="text-center contact-about">
+                    <li class="text-center contact-email">email: justyna@gmail.com</li>
                     <li class="text-center contact-facebook">
                         <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
                             aria-label="Visit-my-Facebook-page (opens in the new tab)">
                             <i class="fa-brands fa-facebook fa-lg"></i>Facebook</a>
-                    </li><br>
+                    </li>
                     <li class="text-center contact-instagram">
                         <a href="https://www.instagram.com/zlappsa/" target="_blank" rel="noopener"
                             aria-label="Visit-my-Instagram-page (opens in the new tab)"><i
                                 class="fa-brands fa-instagram fa-lg"></i>Instagram</a>
-                    </li><br>
+                    </li>
                 </ul>
             </div>
             <!-- Updated on field -->
