--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -19,11 +19,10 @@
   <div class="row">
     <div class="col card mb-4  mt-3 left top">
       <div class="card-body">
-        <p class="font-weight-bold">
-        <div class="col-md-6 masthead-text text-start">
+        <div class="col-md-6 masthead-text text-start font-weight-bold">
           <p class="post-subtitle"><strong>{{ review.author }} | {{ review.created_on }}</strong></p>
         </div>
-        <div class="card-text reviewText textContent" review_id="{{ review.id }}">
+        <div class="card-text reviewText textContent">
           {{ review.content | safe }}
           <hr>
         </div>
@@ -39,11 +38,11 @@
   </div>
 
   <!-- Delete confirmation modal for reviews -->
-  <div class="modal fade" id="deleteModalReview" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal fade" id="deleteModalReview" tabindex="-1" aria-labelledby="deleteModalLabelReview" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
+          <h5 class="modal-title" id="deleteModalLabelReview">Delete review?</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -76,7 +75,6 @@
       <div class="col-md-8 card mb-4  mt-3 ">
         <h3 class="text-decoration-underline">Comments:</h3>
         <div class="card-body">
-
           {% for comment in comments %}
           <div class="p-2 comments
           {% if not comment.approved and comment.author == user %}
@@ -124,11 +122,11 @@
     </div>
   </div>
   <!-- Delete confirmation modal for comments -->
-  <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabelComment" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+          <h5 class="modal-title" id="deleteModalLabelComment">Delete comment?</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
