--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -97,9 +97,7 @@
       <h3 class="text-decoration-underline">Comments:</h3>
       <div class="card-body">
         {% for comment in comments %}
-        <div class="p-2 comments
-          {% if not comment.approved and comment.author == user %}
-          faded{% elif not comment.approved %} d-none{% endif %}">
+        <div class="p-2 comments">
           <p class="font-weight-bold"><strong>
               {{ comment.author }} |
               <span class="font-weight-normal">
@@ -109,10 +107,11 @@
           <div id="comment{{ comment.id }}" class="commentText">
             {{ comment.body | linebreaks }}
           </div>
-          
+          {% if comment.author == user %}
           <p class="approval">
             You added this comment
           </p>
+          {% endif %}
           
           {% if user.is_authenticated and comment.author == user %}
           <button class="btn btn-delete deleteCommentButtons" comment_id="{{ comment.id }}">Delete</button>
