--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -51,7 +51,7 @@
           <button type="submit" class="btn btn-signup btn-lg">Update</button>
         </form>
         {% else %}
-        <p>Log in to update your review</p>
+        <p>Log in to add or update your review</p>
         {% endif %}
       </div>
     </div>
