--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -11,7 +11,7 @@
                 <h2 class="text-left text-decoration-underline mt-3 mb-5">Welcome to my Catch a Dog<br><i
                         class="fa-solid fa-dog" style="color: #2f15f4;"></i>
                     website!</h2><br>
-                <h4 class="introduction">A website dedicated to therapy and rehabilitation for animals. You can read and
+                <h4 class="introduction col-12">A website dedicated to therapy and rehabilitation for animals. You can read and
                     comment on others' reviews. If your dog or cat was my client and you want to share your opinion with others,
                     please you are welcome to do so
                     after logging in!</h4>
