edit style for home page

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -48,7 +48,12 @@ a:hover {
 /* introduction */
 
 .introduction {
-    width: 50%;
+    width: 45%;
+    margin-left: 10%;
+}
+
+.welcome-text {
+    margin-left: 10%;
 }
 
 
