add class to introduction section

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -16,7 +16,7 @@
                     comment on others' reviews. On my website you can find all the necessary information but 
                     if you stil have any questions, please contact me.If your dog or cat was my client and you want
                     to share your opinion with others, please you are welcome to do so
-                    after logging in!<hr>You can see all reviews below</h4>
+                    after logging in!<hr class="pb-4">You can see all reviews below</h4>
             </div>
         </div>
         <div class="col-12 mt-5">
