--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body class="d-flex flex-column h-100 main-bg background-image">
+<body class="d-flex flex-column h-100 main-bg">
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
@@ -91,7 +91,7 @@
   {% block content %}
   {% endblock %}
 
-  <main class="flex-shrink-0 main-bg text-white">
+  <main class="flex-shrink-0 main-bg text-black">
     {% if user.is_authenticated %}
     <p class="text-center m-3">You are logged in as {{ user }}</p>
     {% else %}
