--- a/templates/base.html
+++ b/templates/base.html
@@ -93,9 +93,9 @@
 
   <main class="flex-shrink-0 main-bg text-black">
     {% if user.is_authenticated %}
-    <p class="text-center m-3">You are logged in as {{ user }}</p>
+    <p class="text-center">You are logged in as {{ user }}</p>
     {% else %}
-    <p class="text-center m-3">You are not logged in</p>
+    <p class="text-center">You are not logged in</p>
     {% endif %}
   </main>
 
