--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -10,7 +9,7 @@
 <!-- Displaying Reviews -->
 <div class="container">
   <div class="row">
-    <div class="col card mb-4  mt-3 left top">
+    <div class="col card mb-4 mt-3 left top">
       <div class="card-body">
         <div class="col-md-6 masthead-text text-start font-weight-bold">
           <p class="post-subtitle"><strong>{{ review.author }} | {{ review.created_on }}</strong></p>
@@ -18,12 +17,18 @@
         <div class="card-text reviewText textContent reviewContent" id="review{{ review.id }}">
           {{ review.content | safe }}
           <hr>
+          <!-- Display review image if it exists -->
+          {% if review.image %}
+          <img src="{{ review.image.url }}" alt="Review Image" style="max-width: 100%; height: auto;">
+          <hr>
+          {% endif %}
         </div>
-        
+
         {% if user.is_authenticated and review.author == user %}
         <!-- Display buttons for the review author -->
         <button class="btn deleteReviewButtons review" review_id="{{ review.id }}">Delete</button>
-        <button class="btn editReviewButtons review reviewText editReviewButtons" review_id="{{ review.id }}">Edit</button>
+        <button class="btn editReviewButtons review reviewText editReviewButtons"
+          review_id="{{ review.id }}">Edit</button>
         {% endif %}
       </div>
       <hr>
@@ -32,23 +37,23 @@
     <div class="col-md-4 card mb-4 mt-3">
       <div class="card-body">
         {% if user.is_authenticated %}
-          {% if review.author == user %}
-            <!-- Form to edit the review if the user is the author -->
-            <h3 class="text-decoration-underline">Edit your review:</h3>
-            <p>Posting as: {{ user.username }}</p>
-            <form id="reviewForm" method="post">
-              {{ review_form | crispy }}
-              {% csrf_token %}
-              <input type="hidden" name="edit_review" value="1">
-              <button type="submit" class="btn btn-signup btn-lg">Update</button>
-            </form>
-          {% else %}
-            <!-- Message if the user is logged in but not the author -->
-            <p>You can leave a comment on this review.</p>
-          {% endif %}
+        {% if review.author == user %}
+        <!-- Form to edit the review if the user is the author -->
+        <h3 class="text-decoration-underline">Edit your review:</h3>
+        <p>Posting as: {{ user.username }}</p>
+        <form id="reviewForm" method="post" enctype="multipart/form-data">
+          {{ review_form | crispy }}
+          {% csrf_token %}
+          <input type="hidden" name="edit_review" value="1">
+          <button type="submit" class="btn btn-signup btn-lg">Update</button>
+        </form>
         {% else %}
-          <!-- Message for not logged-in users -->
-          <p>Log in to add or update your review</p>
+        <!-- Message if the user is logged in but not the author -->
+        <p>You can leave a comment on this review.</p>
+        {% endif %}
+        {% else %}
+        <!-- Message for not logged-in users -->
+        <p>Log in to add or update your review</p>
         {% endif %}
       </div>
     </div>
@@ -71,8 +76,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a id="deleteConfirmReview" href="#" aria-label="delete-confirm-review" class="btn
-          btn-danger">Delete</a>
+        <a id="deleteConfirmReview" href="#" aria-label="delete-confirm-review" class="btn btn-danger">Delete</a>
       </div>
     </div>
   </div>
@@ -106,8 +110,8 @@
           <div id="comment{{ comment.id }}" class="commentText">
             {{ comment.body | linebreaks }}
           </div>
-          
-          
+
+
           {% if user.is_authenticated and comment.author == user %}
           <button class="btn btn-delete deleteCommentButtons" comment_id="{{ comment.id }}">Delete</button>
           <button class="btn btn-edit editButtons" comment_id="{{ comment.id }}">Edit</button>
@@ -139,7 +143,8 @@
 
 
 <!-- Delete confirmation modal for comments -->
-<div class="modal fade" id="deleteModalComment" tabindex="-1" aria-labelledby="deleteModalLabelComment" aria-hidden="true">
+<div class="modal fade" id="deleteModalComment" tabindex="-1" aria-labelledby="deleteModalLabelComment"
+  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
