--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -11,7 +11,7 @@
         {% if user.is_authenticated %}
         <h3 class="text-decoration-underline">Add your review:</h3>
         <p>Posted as: {{ user.username }}</p>
-        <form id="reviewForm" method="post" enctype="multipart/form-data" style="margin-top: 1.3em;" class="review_id reviewText">
+        <form id="reviewForm" method="post" style="margin-top: 1.3em;" class="review_id reviewText">
             {{ review_form | crispy }}
             {% csrf_token %}
             <button id="submitButtonReview" type="submit" class="btn btn-signup btn-lg">Submit</button>
