--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,7 +4,7 @@
 
 <div class="container mt-5">
     <div class="row text-center">
-        <div class="col-12 text-center image-about">
+        <div class="col-12 text-center image-about mb-3">
             <img src="{% static 'images/about.foto.jpg' %}" alt="dog with owner">
         </div>
         <div class="col-12">
@@ -14,10 +14,52 @@
             {{ about.content | safe }}
         </div>
     </div>
+
+    <div class="row mb-4">
+        <div class="col-sm-6 mb-3 mb-sm-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Manual massage</h5>
+                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional
+                        content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Fitness</h5>
+                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Taping</h5>
+                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Indiba Animal</h5>
+                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
     <div class="row">
         <div class="col text-right">
             <div class="text-center fs-5 ">
-                <p><strong>If you want to get more information about therapy or make an appointment, please contact me by:</strong></p>
+                <p><strong>If you want to get more information about therapy or make an appointment, please contact me
+                        by:</strong></p>
                 <ul class="text-center contact-about">
                     <li class="text-center contact-email">email: justyna@gmail.com</li>
                     <li class="text-center contact-facebook">
