--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -7,7 +7,7 @@
         <div class="col-12 text-center image-about mb-3">
             <img src="{% static 'images/about.foto.jpg' %}" alt="dog with owner">
         </div>
-        <div class="col-12">
+        <div class="col-12 mb-3">
             <!-- Title  -->
             <h2>{{ about.title }}</h2>
             <!-- Content -->
