add content to about page

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -19,40 +19,37 @@
         <div class="col-sm-6 mb-3 mb-sm-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title text-center">Manual massage</h5>
-                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional
-                        content.</p>
+                    <h5 class="card-title text-center">Indiba Animal 50 euro - <span class="text-danger">NEW</span></h5>
+                    <p class="card-text text-center">INDIBA® technology stimulates the body's regenerative processes, allowing for deep tissue treatment without invasiveness and pain for the animal. Indiba Animal Health AH-100 is used for joint and muscle pain therapy. Supports rehabilitation after fractures, tendon injuries, desmopathy, inflammation of the synovium or joint capsule. Ideal for scar therapy, bringing relief by reducing pain, swelling and accelerating the healing process. Increases the effects of manual therapy. Accelerates wound healing (including difficult-to-heal wounds). Accelerates bone fusion after fractures.</p>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mb-3 mb-sm-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title text-center">Fitness</h5>
-                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title text-center">Manual massage 40 euro</h5>
+                    <p class="card-text text-center">Massage improves blood circulation, causes better oxygenation and nourishment of tissues. Improves muscle efficiency and the rate of their regeneration. In patients with neurological disorders, massage improves deep sensation by simulating nerve conduction. Massage is always performed in a position that is safe for the dog, most often on the ground, providing the dog with a comfortable position on a soft surface. It is important that the massage is performed in a quiet environment, without distractions for the animal. The owner should be present during the massage to provide the dog with maximum psychological comfort.</p>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mb-3 mb-sm-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title text-center">Taping</h5>
-                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title text-center">Fitness 40 euro</h5>
+                    <p class="card-text text-center">Its aim is to improve the dog's fitness and motor coordination, as well as work on specific elements such as speed, jumping or agility. By using various equipment such as platforms, cubes, hedgehogs, balls, we are able to influence the movement of specific dog muscles and strengthen them. It is also an excellent activity for anxious and insecure dogs. Fitness exercises prevent minor injuries and contusions during play, and also help reduce muscle tension and overload caused by pulling on a leash or poorly fitted harnesses.</p>
                 </div>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mb-3 mb-sm-3">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title text-center">Indiba Animal</h5>
-                    <p class="card-text text-center">With supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title text-center">Taping 30 euro</h5>
+                    <p class="card-text text-center">Animal taping is a procedure that effectively reduces pain, reduces inflammation, maintains full range of motion, eliminates lymphatic congestion and swelling, relieves muscles, improves blood and lymph circulation, and corrects the positioning of fascia and skin. Due to its effect, veterinary kinesiotaping is recommended primarily after injuries such as sprains, twists, bruises, or muscle injuries, in degenerative changes and in painful conditions, e.g. muscles or joints.</p>
                 </div>
             </div>
         </div>
+        
     </div>
-
-
-
 
 
     <div class="row">
@@ -81,7 +78,7 @@
 </div>
 
 <!-- Gallery -->
-<div class="container text-center">
+<div class="container text-center mb-3">
     <div class="row text-center d-flex flex-row gallery">
         <div class="col-12 col-sm-4 col-md-4 col-lg-4">
             <img src="{% static 'images/foto1.jpg' %}" alt="dog" class="about-gallery">
