--- a/templates/base.html
+++ b/templates/base.html
@@ -66,6 +66,10 @@
               href="{% url 'account_login' %}">Login</a>
           </li>
           {% endif %}
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == contact_url %}active{% endif %}" aria-current="page"
+              href="{% url 'contact:contact' %}">Contact us</a>
+          </li>
         </ul>
         <span class="navbar-text text-end text-white">
           ADVANCED ZOOPHYSIOTHERAPY & FITNESS
@@ -106,7 +110,7 @@
       Copyright 2023 | Catch a dog
       {% endblock copyright %}
     </p>
-    
+
     <ul class="text-center text-white">
       <li>
         <a href="https://www.facebook.com/zlappsafizjo" target="_blank" rel="noopener"
