--- a/reviews/templates/reviews/reviews_detail.html
+++ b/reviews/templates/reviews/reviews_detail.html
@@ -124,7 +124,7 @@
           <button id="submitButtonComment" type="submit" class="btn btn-signup btn-lg">Submit</button>
         </form>
         {% else %}
-        <p>Log in to leave a comment</p>
+        <p>Log in to leave a comment or add your review</p>
         {% endif %}
       </div>
     </div>
